Bug #20742 Assertion in drop of ndb binlog events after node restart - make sure TE_ACTIVE event comes when node restarts so that ref counting is correct for drop of event